--- a/index.html
+++ b/index.html
@@ -5,9 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission-2022</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="flexible-container">
+        <div class="half-width">
+            <div class="dari">
+            <h1>Stay Focused on</h1>
+            <h1 id="mission">Dream 2022</h1>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis delectus ipsum totam soluta doloribus nostrum sint culpa distinctio quae commodi Lorem ipsum dolor sit amet.</p>
+            <a target="-blank" class="link-button" href="https://www.youtube.com">Explore Now</a>
+            <p id="explore">Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-1.png" alt="">
+        </div>
+    </section>
+    <section class="my-mission">
+        <h1 id="my-dream">My Dream in <span id="color">2022</span></h1>
+      <div class="flexible-container">
+        <div class="mission mission-1">
+            <img src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Mission</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aliquam a exercitationem iure pariatur ea nisi aspernatur earum itaque.</p>
+        </div>
+        <div class="mission vission-1">
+            <img src="images/illustrators/illustrator-2.png" alt="">
+            <h3>Vission</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore dicta facere iste quis! Eum quia numquam ullam dignissimos dicta repudiandae.</p>
+        </div>
+        <div class="mission goal-1">
+            <img src="images/illustrators/illustrator-3.png" alt="">
+            <h3>Goals</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, architecto possimus quia aliquid consectetur pariatur dicta molestiae quibusdam. Nihil.</p>
+        </div>
+      </div>
+    </section>
+    <section class="flexible-container">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Develop</h2>
+            <h2>Without Limits</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorem rem molestiae labore natus neque repellat aliquid praesentium itaque saepe reprehenderit, corporis maiores minus nemo optio ab dolorum magni, iste quod est ducimus asperiores! Incidunt.</p>
+            <a class="link-button" href="https://www.youtube.com">Read the Documentation</a>
+        </div>
+    </section>
+    <section class="flexible-container">
+        <div class="half-width">
+            <h2>Know our</h2>
+            <h2>Global Community</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi distinctio fugit ratione nostrum culpa deserunt eaque adipisci, dolorum voluptatum minus ad quo ex at nulla magnam eius vero quibusdam blanditiis, praesentium molestias nam.</p>
+            <a class="link-button" href="https://www.youtube.com">Read the Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="foother">   
+            <h2><i>Mission <span id="foother-color">2022</span></i></h2>
+            <small>Hard work,Perseverance,and Determination for 2022</small>
+        </div>
+    </section>
 </body>
 </html>
