--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <h1>Stay Focused on</h1>
             <h1 id="mission">Dream 2022</h1>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis delectus ipsum totam soluta doloribus nostrum sint culpa distinctio quae commodi Lorem ipsum dolor sit amet.</p>
+            <p>I'm Ashis Biswas.I'm learning web devlopment at programming hero.It's my dream,it
+            s my passions.I wantto be  succesfull web Application developer.I do it.</p>
             <a target="-blank" class="link-button" href="https://www.youtube.com">Explore Now</a>
             <p id="explore">Scroll down to explore more about us</p>
         </div>
@@ -31,36 +32,39 @@
         <div class="mission mission-1">
             <img src="images/illustrators/illustrator-1.png" alt="">
             <h3>Mission</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aliquam a exercitationem iure pariatur ea nisi aspernatur earum itaque.</p>
+            <p>I'm Ashis Biswas.I'm learning web devlopment at programming hero.It's my dream,it
+             s my passions.I wantto be  succesfull web Application developer.I do it.</p>
         </div>
         <div class="mission vission-1">
             <img src="images/illustrators/illustrator-2.png" alt="">
             <h3>Vission</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore dicta facere iste quis! Eum quia numquam ullam dignissimos dicta repudiandae.</p>
+            <p>I'm Ashis Biswas.I'm learning web devlopment at programming hero.It's my dream,it
+            s my passions.I wantto be  succesfull web Application developer.I do it.</p>
         </div>
         <div class="mission goal-1">
             <img src="images/illustrators/illustrator-3.png" alt="">
             <h3>Goals</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, architecto possimus quia aliquid consectetur pariatur dicta molestiae quibusdam. Nihil.</p>
+            <p>I'm Ashis Biswas.I'm learning web devlopment at programming hero.It's my dream,it
+            s my passions.I wantto be  succesfull web Application developer.I do it.</p>
         </div>
       </div>
     </section>
-    <section class="flexible-container">
+    <section class="flexible-container develop-limit">
         <div class="half-width">
             <img src="images/pictures/coding.png" alt="">
         </div>
         <div class="half-width">
             <h2>Develop</h2>
             <h2>Without Limits</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorem rem molestiae labore natus neque repellat aliquid praesentium itaque saepe reprehenderit, corporis maiores minus nemo optio ab dolorum magni, iste quod est ducimus asperiores! Incidunt.</p>
+            <p>Development Without Limits helps organizations large and small, private and public, lead the future of our children’s education.We help our clients expand their vision, become leaders on their quest, and continue to bring new opportunities to our education communitye.</p>
             <a class="link-button" href="https://www.youtube.com">Read the Documentation</a>
         </div>
     </section>
-    <section class="flexible-container">
+    <section class="flexible-container global-community">
         <div class="half-width">
             <h2>Know our</h2>
             <h2>Global Community</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi distinctio fugit ratione nostrum culpa deserunt eaque adipisci, dolorum voluptatum minus ad quo ex at nulla magnam eius vero quibusdam blanditiis, praesentium molestias nam.</p>
+            <p>Globalization is the gradual process of the world shrinking as people of different nations, cultures and religions know more about one another. Western ideas and modes of living are seeping into the fabric of the world. The American baseball cap is now worn from Tahiti to Timbuktu. McDonald’s is ubiquitous.</p>
             <a class="link-button" href="https://www.youtube.com">Read the Documentation</a>
         </div>
         <div class="half-width">
@@ -68,8 +72,21 @@
         </div>
     </section>
     <section>
+        <h2 id="product-head">Our Product</h2>
+      <div class="flexible-container">
+        <div class="half-width product" id="product-1">
+            <h3>Shoes</h3>
+            <img src="images/categories/shoes.png" alt="">
+        </div>
+        <div class="half-width product" id="product-2">
+            <h3>Watch</h3>
+            <img src="images/categories/watch.png" alt="">
+        </div>
+      </div>
+    </section>
+    <section>
         <div class="foother">   
-            <h2><i>Mission <span id="foother-color">2022</span></i></h2>
+            <h2 id="font-mekup">Mission <span id="foother-color">2022</span></h2>
             <small>Hard work,Perseverance,and Determination for 2022</small>
         </div>
     </section>
